--- a/.github/workflows/c++_action.yml
+++ b/.github/workflows/c++_action.yml
@@ -20,4 +20,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build project
-        run: g++ main.cpp -std=c++17 -o firstIO
+        run: g++ Hello_world.cpp -std=c++17 -o firstIO
